--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img id="senai" src="./assets/logo-senai.png" alt="">
             </div>
             <ul>
-                <p>Home</p>
+                <p class="menu-home">Home</p>
             </ul>
         </nav>
 
@@ -135,18 +135,17 @@
 
                     <div class="top-card">
                         <p class="top-card-texto">online</p>
-                        <p class="top-card-texto">tecnologia</p>
-                        <p class="top-card-texto">programação</p>
+                        <p class="top-card-texto">design</p>
+                        <p class="top-card-texto">criatividade</p>
                     </div>
                     <div class="texto-card">
-                        <p class="curso-card"> Desenvolvimento Web Full Stack</p>
-                        <p class="sobre-card">Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript,
-                            Node.js e
-                            muito mais.</p>
+                        <p class="curso-card"> Design Gráfico com Canva</p>
+                        <p class="sobre-card">Crie materiais visuais impactantes para redes sociais, empresas ou uso
+                            pessoal usando o Canva.</p>
 
                         <div class="carga-horaria">
                             <i class="bi bi-clock"></i>
-                            <p class="horaria-card">Carga horaria: 80 horas</p>
+                            <p class="horaria-card">Carga horaria: 15 horas</p>
                         </div>
 
 
@@ -160,19 +159,18 @@
                 <div class="card">
 
                     <div class="top-card">
-                        <p class="top-card-texto">online</p>
-                        <p class="top-card-texto">tecnologia</p>
-                        <p class="top-card-texto">programação</p>
+                        <p class="top-card-texto">presencial</p>
+                        <p class="top-card-texto">administração</p>
+                        <p class="top-card-texto">empreendedorismo</p>
                     </div>
                     <div class="texto-card">
-                        <p class="curso-card"> Desenvolvimento Web Full Stack</p>
-                        <p class="sobre-card">Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript,
-                            Node.js e
-                            muito mais.</p>
+                        <p class="curso-card"> Marketing Digital para Pequenos Negócios</p>
+                        <p class="sobre-card">Domine estratégias de marketing online para atrair clientes e aumentar
+                            suas vendas.</p>
 
                         <div class="carga-horaria">
                             <i class="bi bi-clock"></i>
-                            <p class="horaria-card">Carga horaria: 80 horas</p>
+                            <p class="horaria-card">Carga horaria: 30 horas</p>
                         </div>
 
 
@@ -186,19 +184,18 @@
                 <div class="card">
 
                     <div class="top-card">
-                        <p class="top-card-texto">online</p>
                         <p class="top-card-texto">tecnologia</p>
-                        <p class="top-card-texto">programação</p>
+                        <p class="top-card-texto">EAD</p>
+
                     </div>
                     <div class="texto-card">
-                        <p class="curso-card"> Desenvolvimento Web Full Stack</p>
-                        <p class="sobre-card">Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript,
-                            Node.js e
-                            muito mais.</p>
+                        <p class="curso-card"> Lógica de Programação</p>
+                        <p class="sobre-card">Ideal para iniciantes, este curso ensina os princípios fundamentais da
+                            programação de forma descomplicada.</p>
 
                         <div class="carga-horaria">
                             <i class="bi bi-clock"></i>
-                            <p class="horaria-card">Carga horaria: 80 horas</p>
+                            <p class="horaria-card">Carga horaria: 35 horas</p>
                         </div>
 
 
@@ -207,20 +204,18 @@
                         <button class="btn-mais">Saiba Mais</button>
                         <button class="btn-inscrever">Inscrever-se</button>
                     </div>
-
                 </div>
                 <div class="card">
 
                     <div class="top-card">
-                        <p class="top-card-texto">online</p>
-                        <p class="top-card-texto">tecnologia</p>
-                        <p class="top-card-texto">programação</p>
+                        <p class="top-card-texto">cursos livres</p>
+                        <p class="top-card-texto">presencial</p>
+                        <p class="top-card-texto">saúde</p>
                     </div>
                     <div class="texto-card">
-                        <p class="curso-card"> Desenvolvimento Web Full Stack</p>
-                        <p class="sobre-card">Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript,
-                            Node.js e
-                            muito mais.</p>
+                        <p class="curso-card"> Primeiros Socorros</p>
+                        <p class="sobre-card">Aprenda como agir em situações de emergência e prestar os primeiros
+                            atendimentos corretamente.</p>
 
                         <div class="carga-horaria">
                             <i class="bi bi-clock"></i>
@@ -246,18 +241,17 @@
 
                     <div class="top-card">
                         <p class="top-card-texto">online</p>
-                        <p class="top-card-texto">tecnologia</p>
-                        <p class="top-card-texto">programação</p>
+                        <p class="top-card-texto">financeiro</p>
+
                     </div>
                     <div class="texto-card">
-                        <p class="curso-card"> Desenvolvimento Web Full Stack</p>
-                        <p class="sobre-card">Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript,
-                            Node.js e
-                            muito mais.</p>
+                        <p class="curso-card"> Educação Financeira Pessoal</p>
+                        <p class="sobre-card">Organize suas finanças, controle gastos, e aprenda a investir com
+                            inteligência.</p>
 
                         <div class="carga-horaria">
                             <i class="bi bi-clock"></i>
-                            <p class="horaria-card">Carga horaria: 80 horas</p>
+                            <p class="horaria-card">Carga horaria: 18 horas</p>
                         </div>
 
 
@@ -268,85 +262,6 @@
                     </div>
 
                 </div>
-                <div class="card">
-
-                    <div class="top-card">
-                        <p class="top-card-texto">online</p>
-                        <p class="top-card-texto">tecnologia</p>
-                        <p class="top-card-texto">programação</p>
-                    </div>
-                    <div class="texto-card">
-                        <p class="curso-card"> Desenvolvimento Web Full Stack</p>
-                        <p class="sobre-card">Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript,
-                            Node.js e
-                            muito mais.</p>
-
-                        <div class="carga-horaria">
-                            <i class="bi bi-clock"></i>
-                            <p class="horaria-card">Carga horaria: 80 horas</p>
-                        </div>
-
-
-                    </div>
-                    <div class="btn-card">
-                        <button class="btn-mais">Saiba Mais</button>
-                        <button class="btn-inscrever">Inscrever-se</button>
-                    </div>
-
-                </div>
-                <div class="card">
-
-                    <div class="top-card">
-                        <p class="top-card-texto">online</p>
-                        <p class="top-card-texto">tecnologia</p>
-                        <p class="top-card-texto">programação</p>
-                    </div>
-                    <div class="texto-card">
-                        <p class="curso-card"> Desenvolvimento Web Full Stack</p>
-                        <p class="sobre-card">Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript,
-                            Node.js e
-                            muito mais.</p>
-
-                        <div class="carga-horaria">
-                            <i class="bi bi-clock"></i>
-                            <p class="horaria-card">Carga horaria: 80 horas</p>
-                        </div>
-
-
-                    </div>
-                    <div class="btn-card">
-                        <button class="btn-mais">Saiba Mais</button>
-                        <button class="btn-inscrever">Inscrever-se</button>
-                    </div>
-
-                </div>
-                <div class="card">
-
-                    <div class="top-card">
-                        <p class="top-card-texto">online</p>
-                        <p class="top-card-texto">tecnologia</p>
-                        <p class="top-card-texto">programação</p>
-                    </div>
-                    <div class="texto-card">
-                        <p class="curso-card"> Desenvolvimento Web Full Stack</p>
-                        <p class="sobre-card">Aprenda a criar aplicações web modernas utilizando HTML, CSS, JavaScript,
-                            Node.js e
-                            muito mais.</p>
-
-                        <div class="carga-horaria">
-                            <i class="bi bi-clock"></i>
-                            <p class="horaria-card">Carga horaria: 80 horas</p>
-                        </div>
-
-
-                    </div>
-                    <div class="btn-card">
-                        <button class="btn-mais">Saiba Mais</button>
-                        <button class="btn-inscrever">Inscrever-se</button>
-                    </div>
-
-                </div>
-
 
             </div>
 
@@ -356,7 +271,33 @@
 
 
     <footer>
-
+        <div class="lista-footer">
+            <ul>
+                <li class="titulo-footer">Sobre Nós</li>
+                <p class="texto-footer">
+                    Somos uma plataforma dedicada a oferecer cursos online e presenciais nas mais diversas áreas de
+                    conhecimento
+                </p>
+            </ul>
+            <ul>
+                <li class="titulo-footer">Links Utéis</li>
+                <li class="texto-footer">Cursos</li>
+                <li class="texto-footer">Blog</li>
+                <li class="texto-footer">Contato</li>
+                <li class="texto-footer">Política de privacidade</li>
+            </ul>
+            <ul>
+                <li class="titulo-footer">Redes ociais</li>
+                <li class="texto-footer">Facebook</li>
+                <li class="texto-footer">Instagram</li>
+                <li class="texto-footer">Twitter</li>
+                <li class="texto-footer">Linkedin</li>
+            </ul>
+        </div>
+        <hr class="linha-footer">
+        <div class="direitos-footer">
+            <p>© 2025 Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
 
